# stable-jarvis

./: .claudeignore  .codexignore  .geminiignore  .gitignore  AGENTS.md.template  GEMINI.md.template  LICENSE  README.md  README_en.md  install.sh  install.windows.ps1  install_mac.sh  pyproject.toml  setup.py
.claude/: settings.json.template
.codex/: config.toml.template
.gemini/: settings.json.template
.gemini/commands/daily/: plan.toml
.gemini/policies/: obsidian-policy.toml
commands/daily/: plan.toml  plan.toml.template
commands/paper/: analyze.toml
config/: api_keys.json.template  zotero.json
log/: changelog.md
scripts/: extract_images.py  image_manifest.py  migrate_notion_papers.py  upload_report_note.py  zotero_highlight.py
skills/academic-grant-writer/: SKILL.md
skills/continuous-agent-loop/: SKILL.md
skills/continuous-learning-v2/: SKILL.md
skills/exa-search/: SKILL.md
skills/iterative-retrieval/: SKILL.md
skills/knowledge-distillation-from-discussion/: SKILL.md
skills/notion-to-markdown/: SKILL.md
skills/notion-to-markdown/scripts/: migrate.py
skills/obsidian-auto-classifier/: SKILL.md
skills/obsidian-batch-yaml/: SKILL.md
skills/paper-analyzer/: SKILL.md
skills/paper-analyzer/reference/: RL_prompt.md  robotics_prompt.md
skills/paper-finder/: SKILL.md  find_papers.py
skills/paper-finder/prompts/: enrich-candidate.prompt.txt
skills/pptx/: SKILL.md
skills/python-patterns/: SKILL.md
skills/tech-doc-writing/: SKILL.md
skills/web-research/: SKILL.md
skills/weekly-report-generator/: SKILL.md
skills/weekly-report-generator/scripts/: generate_report.py
src/scripts/: extract_images.py  fix_tags_spaces.py  fix_windows_filenames.py  image_manifest.py  upload_report_note.py  zotero_highlight.py
src/stable_jarvis/: __init__.py
src/stable_jarvis/annotation/: annotator.py  config.py  coordinates.py  retry.py
src/stable_jarvis/notion_to_obsidian/: __init__.py  manager.py  migrator.py
src/stable_jarvis/paper_finder/: __init__.py  candidate.py  client.py  obsidian.py  parser.py  profile.py  ranker.py  retrieval.py  review.py  semantic.py
src/stable_jarvis/report_generator/: __init__.py  converter.py
src/tests/: __init__.py  find_attachment_key.py  test_extract_images.py  test_image_manifest.py  test_markdown_to_html.py  test_paper_finder.py  test_pdf_converter.py  test_v141_features.py  test_zotero_highlight.py
stable_jarvis_dev/: __init__.py
stable_jarvis_dev/annotation/: __init__.py  annotator.py  config.py  zotero_client.py
tests/: __init__.py  find_attachment_key.py  test_extract_images.py  test_image_manifest.py  test_markdown_to_html.py  test_pdf_converter.py  test_v141_features.py  test_zotero_highlight.py
user_info/: zotero.json
