[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-jarvis-dev"
version = "0.1.0"
description = "A modular toolkit for academic research automation: PDF annotation, PDF-to-Markdown conversion, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JaimeParker"}
]
keywords = ["zotero", "pdf", "annotation", "research", "academic", "markdown", "pymupdf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pymupdf",
    "pymupdf-layout",
    "pymupdf4llm",
    "pyzotero",
    "markdown",
    "defusedxml",
    "lxml",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/JaimeParker/JARVIS-Dev"
Repository = "https://github.com/JaimeParker/JARVIS-Dev"

[tool.setuptools.packages.find]
where = ["."]
include = ["stable_jarvis_dev*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
